gitops/apps/envoy-gateway-resources/httproute-kubernetes-dashboard.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubernetes-dashboard
  namespace: envoy-gateway-system
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "dashboard.homelab.local"
  rules:
  - backendRefs:
    - name: kubernetes-dashboard-web
      namespace: kubernetes-dashboard
      port: 8000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: kubernetes-dashboard-backend
  namespace: kubernetes-dashboard
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: envoy-gateway-system
  to:
  - group: ""
    kind: Service
    name: kubernetes-dashboard-kong-proxy
